2016-11-25  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/OgreCfgSaver.cpp: new class used to serialize new
	Ogre configuration after fullscreen switch.
	* src/client/GameEngine.cpp (keyPressed): taking a screenshot now
	print a TempMessage including name of PNG file.

2016-11-24  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/GameEngine.cpp (reconfigure): use TempMessage to
	print new Fullscreen option value.
	* src/client/TempMessage.cpp: created to print a temporary message
	after fullscreen switch.

	* src/client/MainMenu.cpp (save/restore): All ByiDialogs should be
	saved/restored.
	* src/client/CeguiDialog.cpp (save/restore): implemented for
	CeguiMember pointer.
	* src/client/CeguiDialog.hpp (mDialog): new member.

	* src/client/MainMenu.cpp (enter): setting the correct windowName
	when calling loadLayout makes the MainMenu window getting saved.
	* src/client/GameState.cpp (loadLayout): add a second string argument
	for CEGUI window name to be returned.

	* src/client/Mainpage.hpp: create the client page.
	* src/Mainpage.hpp: mainpage created.
	* src/logger/Mainpage.hpp: becomes a subpage instead of the mainpage.

2016-11-23  Jérôme Pasquier  <rainbru@free.fr>

	* OLD/: recursively remove directory.

	* src/client/GameEngine.cpp (keyPressed): add F11/screenshot
	keybinding.
	* README.md: add F11 key binding for screenshot.

2016-11-21  Jérôme Pasquier  <rainbru@free.fr>

	* README.md: try to fix client key binding table.

2016-11-20  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/MainMenu.cpp (save): try to save/restore menu position.
	* src/client/MainMenu.hpp (mMenuWindow): add a member for the menu.

	* src/client/MainMenu.cpp (save): restore previous Nyi dialogs state.
	* src/client/MainMenu.cpp (save): fully handle Nyi dialogs visibility
	state.
	* src/client/MainMenu.cpp (enter): fix an event connection (Options
	button was calling onNetworkPlay).

	* src/client/CeguiDialog.cpp (setVisible): new member function.
